versioned_docs/version-8.9/components/connectors/out-of-the-box-connectors/agentic-ai/aiagent/configuration/_memory-task.md
import ConfigurationMemoryStorageBackends from './\_memory-storage-backends.md';

### Memory

Configure the agent's short-term conversational memory using the following parameters:

| Field               | Required | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
| :------------------ | :------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Agent context       | Yes      | <p>Specify an agent context variable to store all relevant data for the agent to support a feedback loop between user requests, tool calls, and LLM responses. Make sure this variable points to the `context` variable that is returned from the agent response.</p><p>This is an important variable required to make a feedback loop work correctly. This variable must be aligned with the Output mapping **Result variable** and **Result expression** for this connector.</p><p>**Avoid** reusing the agent context variable across different agent tasks. Define a dedicated [result variable](#output-mapping) name for each agent instead and align it in the context and the result configuration.</p><p>Example: `=agent.context`, `=anotherAgent.context`</p> |
| Context window size | No       | <p>Specify the maximum number of messages to pass to the LLM on every call. Defaults to 20 if not configured.</p><ul><li>Configuring this is a trade-off between cost/tokens and the context window supported by the used model.</li><li>When the conversation exceeds the configured context window size, the oldest messages from past feedback loops are omitted from the model API call first.</li><li>The system prompt is always kept in the list of messages passed to the LLM.</li></ul>                                                                                                                                                                                                                                                                         |
| Memory storage type | Yes      | <p>Specify how the conversation memory should be stored. See [Choose a memory storage backend](#choose-a-memory-storage-backend) below for the available options and their trade-offs.</p>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |

<ConfigurationMemoryStorageBackends />
